# POSCOMP

./: .gitignore  asset-manifest.json  catalog-info.yaml  index.html  mkdocs.yml
src/front/: README.md  package.json
src/front/public/: index.html  manifest.json
src/front/src/: App.css  App.tsx  NavigationSection.tsx  ProblemSection.tsx  ValidateProblemSection.tsx  index.css  index.tsx  problems.ts
src/generation/: main.py  question_generator.py  retriever.py  system.py
src/generation/core/: data_loader.py  embeddings.py  llm.py
src/server/: .env.example  .pre-commit-config.yaml  Makefile  pyproject.toml
src/server/app/: server.py
src/server/app/controllers/: agents.py  prompts.py
src/server/app/data/: areas_subareas.py
src/server/app/routes/: generate.py
src/server/app/schemas/: query.py
src/validation-server/: amostra-filtrada.json  amostra.json  big-fixes.json  checagem.py  dificuldades.json  final.json  gabaritos-poscomp.json  image.json  index.js  ok.json  package.json  pending.json  poscomp-questions-first-version.json  questions-poscomp-first-version.json  questoes_poscomp_inicial.json  skip.json  small-fixes.json
src/validation-server/utils/: check.py  preenche.py  sort.py
static/css/: main.660e17b9.css  main.660e17b9.css.map
static/js/: main.3ce51f82.js  main.3ce51f82.js.map
