[tool.poetry]
name = "app"
version = "0.0.0"
description = "Servidor da aplicação POSCOMP."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.19"
langchain-openai = "^0.3.6"
langchain-core = "^0.3.37"
langchain-community = "^0.3.18"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
